--- a/.env.development
+++ b/.env.development
@@ -1,5 +1,5 @@
-REACT_APP_REST_API_BASE_URL = http://streetfood.localhost/rest-api
-REACT_APP_AUTH_API_BASE_URL = http://streetfood.localhost/auth-api
+# REACT_APP_REST_API_BASE_URL = http://streetfood.localhost/rest-api
+# REACT_APP_AUTH_API_BASE_URL = http://streetfood.localhost/auth-api
 
-# REACT_APP_REST_API_BASE_URL = http://localhost:8080/rest-api
-# REACT_APP_AUTH_API_BASE_URL = http://localhost:8082/auth-api
+REACT_APP_REST_API_BASE_URL = http://localhost:8080/rest-api
+REACT_APP_AUTH_API_BASE_URL = http://localhost:8082/auth-api
