--- a/.env.production
+++ b/.env.production
@@ -1,2 +1,5 @@
-REACT_APP_REST_API_BASE_URL = https://streetfood.mondomaine.com/rest-api
-REACT_APP_AUTH_API_BASE_URL = https://streetfood.mondomaine.com/auth-api
+# REACT_APP_REST_API_BASE_URL = https://streetfood.mondomaine.com/rest-api
+# REACT_APP_AUTH_API_BASE_URL = https://streetfood.mondomaine.com/auth-api
+
+REACT_APP_REST_API_BASE_URL = http://streetfood.localhost/rest-api
+REACT_APP_AUTH_API_BASE_URL = http://streetfood.localhost/auth-api
